fix: exposed headers 추가